fix user and post tests
