# src/routers/post.ts
@@ -1,11 +1,9 @@
 import { Router } from "express";
 import * as postController from "../controllers/post";
+import { validatePostData, authenticateUser } from "./helper";
 const router = Router();
 
-router.get("/", postController.index);
-router.post("/", postController.create);
-router.get("/:postId", postController.show);
-router.put("/:postId", postController.update);
-router.delete("/:postId", postController.destroy);
+router.post("/", authenticateUser, validatePostData, postController.create);
+router.get("/:postId", authenticateUser, postController.show);
 
 export default router;
